# code_generator

./: .gitignore  setup.cfg
generator/: __init__.py  apps.py
generator.egg-info/: PKG-INFO  SOURCES.txt
generator/management/commands/: delete.py  generate.py  generate_form.py  generatecrud.py  post.py
generator/management/commands/api/: delete.py  get.py  patch.py  post.py  put.py
generator/management/commands/api/urls/: create_urls.py
generator/management/commands/form/: create_form.py  delet_form.py  delete_form.py  details_form.py  imports.py  post_form_view.py  read_form.py  update_form.py
generator/management/commands/form/urls/: build.py
generator/management/commands/urls/: build.py  build_url_form.py
