[metadata]
name = django-generator-alyff
version = 0.1.0
description = Gerador de CRUD/Views/URLs para Django
long_description = file: README.md
long_description_content_type = text/markdown
author = Seu Nome
author_email = seu@email.com
license = MIT
url = https://github.com/suaorg/django-generator-alyff
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires = Django>=4.2

[options.packages.find]
exclude = *.egg-info
            tests

[options.package_data]
# caso você venha a distribuir templates/arquivos estáticos:
# generator = templates/**/*.html, static/**/*
